fix footer language select on mobile

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -334,6 +334,11 @@ app-footer {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-flow: column;
+
+      @media screen and (min-width: 640px) {
+        flex-flow: row;
+      }
 
       div {
         height: 1.25rem;
@@ -342,6 +347,12 @@ app-footer {
       }
 
       #language-selector {
+        margin-top: 2rem;
+
+        @media screen and (min-width: 640px) {
+          margin-top: 0;
+        }
+
         ul {
           list-style: none;
           margin: 0;
